tests/dataset/tpc-ds/compiler/go/q76.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq76871958906/001/main.go:467:2: syntax error: unexpected name ny after top level declaration
